jffs2: check jffs2_prealloc_raw_node_refs() result in few other places (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7924,6 +7924,7 @@
 	patches.kernel.org/6.12.35-300-LoongArch-Avoid-using-r0-r1-as-mask-for-csrxc.patch
 	patches.kernel.org/6.12.35-301-LoongArch-Fix-panic-caused-by-NULL-PMD-in-hug.patch
 	patches.kernel.org/6.12.35-302-jffs2-check-that-raw-node-were-preallocated-b.patch
+	patches.kernel.org/6.12.35-303-jffs2-check-jffs2_prealloc_raw_node_refs-resu.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
