--- a/series.conf
+++ b/series.conf
@@ -7880,6 +7880,7 @@
 	patches.kernel.org/6.12.35-256-vxlan-Do-not-treat-dst-cache-initialization-e.patch
 	patches.kernel.org/6.12.35-257-bnxt_en-Remove-unused-field-ref_count-in-stru.patch
 	patches.kernel.org/6.12.35-258-wifi-ath12k-using-msdu-end-descriptor-to-chec.patch
+	patches.kernel.org/6.12.35-259-net-ethernet-ti-am65-cpsw-handle-EPROBE_DEFER.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
