ASoC: codecs: wcd9375: Fix double free of regulator supplies (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7696,6 +7696,7 @@
 	patches.kernel.org/6.12.35-072-arm64-mm-Close-theoretical-race-where-stale-T.patch
 	patches.kernel.org/6.12.35-073-ARM-9447-1-arm-memremap-fix-arch_memremap_can.patch
 	patches.kernel.org/6.12.35-074-ARM-omap-pmic-cpcap-do-not-mess-around-withou.patch
+	patches.kernel.org/6.12.35-075-ASoC-codecs-wcd9375-Fix-double-free-of-regula.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
