tcp: add receive queue awareness in tcp_rcv_space_adjust() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7840,6 +7840,7 @@
 	patches.kernel.org/6.12.35-216-tcp-always-seek-for-minimal-rtt-in-tcp_rcv_rt.patch
 	patches.kernel.org/6.12.35-217-tcp-remove-zero-TCP-TS-samples-for-autotuning.patch
 	patches.kernel.org/6.12.35-218-tcp-fix-initial-tp-rcvq_space.space-value-for.patch
+	patches.kernel.org/6.12.35-219-tcp-add-receive-queue-awareness-in-tcp_rcv_sp.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
