ALSA: hda: cs35l41: Fix swapped l/r audio channels for Acer Helios laptops (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7800,6 +7800,7 @@
 	patches.kernel.org/6.12.35-176-ACPI-Add-missing-prototype-for-non-CONFIG_SUS.patch
 	patches.kernel.org/6.12.35-177-ACPICA-fix-acpi-parse-and-parseext-cache-leak.patch
 	patches.kernel.org/6.12.35-178-ACPICA-Apply-pack-1-to-union-aml_resource.patch
+	patches.kernel.org/6.12.35-179-ALSA-hda-cs35l41-Fix-swapped-l-r-audio-channe.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
