isofs: fix Y2038 and Y2156 issues in Rock Ridge TF entry (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7882,6 +7882,7 @@
 	patches.kernel.org/6.12.35-258-wifi-ath12k-using-msdu-end-descriptor-to-chec.patch
 	patches.kernel.org/6.12.35-259-net-ethernet-ti-am65-cpsw-handle-EPROBE_DEFER.patch
 	patches.kernel.org/6.12.35-260-software-node-Correct-a-OOB-check-in-software.patch
+	patches.kernel.org/6.12.35-261-isofs-fix-Y2038-and-Y2156-issues-in-Rock-Ridg.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
