clocksource: Fix the CPUs' choice in the watchdog per CPU verification (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7790,6 +7790,7 @@
 	patches.kernel.org/6.12.35-166-iio-adc-ad7606_spi-fix-reg-write-value-mask.patch
 	patches.kernel.org/6.12.35-167-ACPICA-fix-acpi-operand-cache-leak-in-dswstat.patch
 	patches.kernel.org/6.12.35-168-ASoC-amd-yc-Add-quirk-for-Lenovo-Yoga-Pro-7-1.patch
+	patches.kernel.org/6.12.35-169-clocksource-Fix-the-CPUs-choice-in-the-watchd.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
