--- a/series.conf
+++ b/series.conf
@@ -7767,6 +7767,7 @@
 	patches.kernel.org/6.12.35-143-cifs-reset-connections-for-all-channels-when-.patch
 	patches.kernel.org/6.12.35-144-cifs-update-dstaddr-whenever-channel-iface-is.patch
 	patches.kernel.org/6.12.35-145-cifs-dns-resolution-is-needed-only-for-primar.patch
+	patches.kernel.org/6.12.35-146-smb-client-add-NULL-check-in-automount_fullpa.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
