--- a/series.conf
+++ b/series.conf
@@ -7873,6 +7873,7 @@
 	patches.kernel.org/6.12.35-249-net-mlx5-HWS-Fix-IP-version-decision.patch
 	patches.kernel.org/6.12.35-250-bpf-Use-proper-type-to-calculate-bpf_raw_tp_n.patch
 	patches.kernel.org/6.12.35-251-wifi-mac80211-VLAN-traffic-in-multicast-path.patch
+	patches.kernel.org/6.12.35-252-Revert-mac80211-Dynamically-set-CoDel-paramet.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
