media: ov2740: Move pm-runtime cleanup on probe-errors to proper place (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7668,6 +7668,7 @@
 	patches.kernel.org/6.12.35-044-media-nxp-imx8-isi-better-handle-the-m2m-usag.patch
 	patches.kernel.org/6.12.35-045-media-i2c-ds90ub913-Fix-returned-fmt-from-.se.patch
 	patches.kernel.org/6.12.35-046-media-ccs-pll-Start-VT-pre-PLL-multiplier-sea.patch
+	patches.kernel.org/6.12.35-047-media-ov2740-Move-pm-runtime-cleanup-on-probe.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
