f2fs: use vmalloc instead of kvmalloc in .init_{,de}compress_ctx (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7814,6 +7814,7 @@
 	patches.kernel.org/6.12.35-190-net-macb-Check-return-value-of-dma_set_mask_a.patch
 	patches.kernel.org/6.12.35-191-net-lan743x-Modify-the-EEPROM-and-OTP-size-fo.patch
 	patches.kernel.org/6.12.35-192-tipc-use-kfree_sensitive-for-aead-cleanup.patch
+	patches.kernel.org/6.12.35-193-f2fs-use-vmalloc-instead-of-kvmalloc-in-.init.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
