--- a/series.conf
+++ b/series.conf
@@ -7819,6 +7819,7 @@
 	patches.kernel.org/6.12.35-195-Bluetooth-btusb-Add-new-VID-PID-13d3-3584-for.patch
 	patches.kernel.org/6.12.35-196-i2c-designware-Invoke-runtime-suspend-on-quic.patch
 	patches.kernel.org/6.12.35-197-wifi-mt76-mt7996-drop-fragments-with-multicas.patch
+	patches.kernel.org/6.12.35-198-emulex-benet-correct-command-version-selectio.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
