ASoC: amd: yc: Add quirk for Lenovo Yoga Pro 7 14ASP9 (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7789,6 +7789,7 @@
 	patches.kernel.org/6.12.35-165-iio-adc-ti-ads1298-Kconfig-add-kfifo-dependen.patch
 	patches.kernel.org/6.12.35-166-iio-adc-ad7606_spi-fix-reg-write-value-mask.patch
 	patches.kernel.org/6.12.35-167-ACPICA-fix-acpi-operand-cache-leak-in-dswstat.patch
+	patches.kernel.org/6.12.35-168-ASoC-amd-yc-Add-quirk-for-Lenovo-Yoga-Pro-7-1.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
