--- a/series.conf
+++ b/series.conf
@@ -7865,6 +7865,7 @@
 	patches.kernel.org/6.12.35-241-libbpf-Add-identical-pointer-detection-to-btf.patch
 	patches.kernel.org/6.12.35-242-scsi-lpfc-Fix-lpfc_check_sli_ndlp-handling-fo.patch
 	patches.kernel.org/6.12.35-243-scsi-smartpqi-Add-new-PCI-IDs.patch
+	patches.kernel.org/6.12.35-244-iommu-amd-Ensure-GA-log-notifier-callbacks-fi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
