fs/xattr.c: fix simple_xattr_list() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7907,6 +7907,7 @@
 	patches.kernel.org/6.12.35-283-ARM-OMAP2-Fix-l4ls-clk-domain-handling-in-STA.patch
 	patches.kernel.org/6.12.35-284-tee-Prevent-size-calculation-wraparound-on-32.patch
 	patches.kernel.org/6.12.35-285-Revert-bus-ti-sysc-Probe-for-l4_wkup-and-l4_c.patch
+	patches.kernel.org/6.12.35-286-fs-xattr.c-fix-simple_xattr_list.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
