--- a/series.conf
+++ b/series.conf
@@ -8009,6 +8009,7 @@
 	patches.kernel.org/6.12.35-385-ublk-santizize-the-arguments-from-userspace-w.patch
 	patches.kernel.org/6.12.35-386-drm-xe-Wire-up-device-shutdown-handler.patch
 	patches.kernel.org/6.12.35-387-drm-xe-gt-Update-handling-of-xe_force_wake_ge.patch
+	patches.kernel.org/6.12.35-388-drm-xe-bmg-Update-Wa_16023588340.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
