bnxt_en: Update MRU and RSS table of RSS contexts on queue reset (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7995,6 +7995,7 @@
 	patches.kernel.org/6.12.35-371-bnxt_en-Fix-double-invocation-of-bnxt_ulp_sto.patch
 	patches.kernel.org/6.12.35-372-eth-bnxt-fix-out-of-range-access-of-vnic_info.patch
 	patches.kernel.org/6.12.35-373-bnxt_en-Add-a-helper-function-to-configure-MR.patch
+	patches.kernel.org/6.12.35-374-bnxt_en-Update-MRU-and-RSS-table-of-RSS-conte.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
