--- a/series.conf
+++ b/series.conf
@@ -7811,6 +7811,7 @@
 	patches.kernel.org/6.12.35-187-PM-runtime-fix-denying-of-auto-suspend-in-pm_.patch
 	patches.kernel.org/6.12.35-188-power-supply-max17040-adjust-thermal-channel-.patch
 	patches.kernel.org/6.12.35-189-ACPI-battery-negate-current-when-discharging.patch
+	patches.kernel.org/6.12.35-190-net-macb-Check-return-value-of-dma_set_mask_a.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
