mtd: nand: sunxi: Add randomizer configuration before randomizer enable (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7743,6 +7743,7 @@
 	patches.kernel.org/6.12.35-119-configfs-tsm-report-Fix-NULL-dereference-of-t.patch
 	patches.kernel.org/6.12.35-120-firmware-arm_scmi-Ensure-that-the-message-id-.patch
 	patches.kernel.org/6.12.35-121-mtd-rawnand-sunxi-Add-randomizer-configuratio.patch
+	patches.kernel.org/6.12.35-122-mtd-nand-sunxi-Add-randomizer-configuration-b.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
