scsi: storvsc: Increase the timeouts to storvsc_timeout (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7929,6 +7929,7 @@
 	patches.kernel.org/6.12.35-305-cifs-serialize-other-channels-when-query-serv.patch
 	patches.kernel.org/6.12.35-306-cifs-do-not-disable-interface-polling-on-fail.patch
 	patches.kernel.org/6.12.35-307-smb-improve-directory-cache-reuse-for-readdir.patch
+	patches.kernel.org/6.12.35-308-scsi-storvsc-Increase-the-timeouts-to-storvsc.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
