bpf: Pass the same orig_call value to trampoline functions (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7848,6 +7848,7 @@
 	patches.kernel.org/6.12.35-224-net-atlantic-generate-software-timestamp-just.patch
 	patches.kernel.org/6.12.35-225-pinctrl-armada-37xx-propagate-error-from-arma.patch
 	patches.kernel.org/6.12.35-226-pinctrl-armada-37xx-propagate-error-from-arma.patch
+	patches.kernel.org/6.12.35-227-bpf-Pass-the-same-orig_call-value-to-trampoli.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
