--- a/series.conf
+++ b/series.conf
@@ -7853,6 +7853,7 @@
 	patches.kernel.org/6.12.35-229-pinctrl-armada-37xx-propagate-error-from-arma.patch
 	patches.kernel.org/6.12.35-230-libbpf-Check-bpf_map_skeleton-link-for-NULL.patch
 	patches.kernel.org/6.12.35-231-pinctrl-armada-37xx-propagate-error-from-arma.patch
+	patches.kernel.org/6.12.35-232-net-mlx4-add-SOF_TIMESTAMPING_TX_SOFTWARE-fla.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
