nfsd: Initialize ssc before laundromat_work to prevent NULL dereference (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7653,6 +7653,7 @@
 	patches.kernel.org/6.12.35-029-NFSD-fix-race-between-nfsd-registration-and-e.patch
 	patches.kernel.org/6.12.35-030-NFSD-Implement-FATTR4_CLONE_BLKSIZE-attribute.patch
 	patches.kernel.org/6.12.35-031-nfsd-nfsd4_spo_must_allow-must-check-this-is-.patch
+	patches.kernel.org/6.12.35-032-nfsd-Initialize-ssc-before-laundromat_work-to.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
