ACPICA: utilities: Fix overflow check in vsnprintf() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7803,6 +7803,7 @@
 	patches.kernel.org/6.12.35-179-ALSA-hda-cs35l41-Fix-swapped-l-r-audio-channe.patch
 	patches.kernel.org/6.12.35-180-power-supply-bq27xxx-Retrieve-again-when-busy.patch
 	patches.kernel.org/6.12.35-181-pmdomain-core-Reset-genpd-states-to-avoid-fre.patch
+	patches.kernel.org/6.12.35-182-ACPICA-utilities-Fix-overflow-check-in-vsnpri.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
