Input: gpio-keys - fix possible concurrent access in gpio_keys_irq_timer() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7719,6 +7719,7 @@
 	patches.kernel.org/6.12.35-095-ext4-ensure-i_size-is-smaller-than-maxbytes.patch
 	patches.kernel.org/6.12.35-096-ext4-only-dirty-folios-when-data-journaling-r.patch
 	patches.kernel.org/6.12.35-097-Input-ims-pcu-check-record-size-in-ims_pcu_fl.patch
+	patches.kernel.org/6.12.35-098-Input-gpio-keys-fix-possible-concurrent-acces.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
