--- a/series.conf
+++ b/series.conf
@@ -7792,6 +7792,7 @@
 	patches.kernel.org/6.12.35-168-ASoC-amd-yc-Add-quirk-for-Lenovo-Yoga-Pro-7-1.patch
 	patches.kernel.org/6.12.35-169-clocksource-Fix-the-CPUs-choice-in-the-watchd.patch
 	patches.kernel.org/6.12.35-170-power-supply-collie-Fix-wakeup-source-leaks-o.patch
+	patches.kernel.org/6.12.35-171-mmc-Add-quirk-to-disable-DDR50-tuning.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
