net/mlx5: Add error handling in mlx5_query_nic_vport_node_guid() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7643,6 +7643,7 @@
 	patches.kernel.org/6.12.35-019-regulator-max20086-Fix-MAX200086-chip-id.patch
 	patches.kernel.org/6.12.35-020-regulator-max20086-Change-enable-gpio-to-opti.patch
 	patches.kernel.org/6.12.35-021-net-mlx5_core-Add-error-handling-inmlx5_query.patch
+	patches.kernel.org/6.12.35-022-net-mlx5-Add-error-handling-in-mlx5_query_nic.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
