powerpc/pseries/msi: Avoid reading PCI device registers in reduced power states (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7635,6 +7635,7 @@
 	patches.kernel.org/6.12.35-011-ASoC-amd-sof_amd_sdw-Fix-unlikely-uninitializ.patch
 	patches.kernel.org/6.12.35-012-io_uring-account-drain-memory-to-cgroup.patch
 	patches.kernel.org/6.12.35-013-io_uring-kbuf-account-ring-io_buffer_list-mem.patch
+	patches.kernel.org/6.12.35-014-powerpc-pseries-msi-Avoid-reading-PCI-device-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
