--- a/series.conf
+++ b/series.conf
@@ -7806,6 +7806,7 @@
 	patches.kernel.org/6.12.35-182-ACPICA-utilities-Fix-overflow-check-in-vsnpri.patch
 	patches.kernel.org/6.12.35-183-platform-msi-Add-msi_remove_device_irq_domain.patch
 	patches.kernel.org/6.12.35-184-ASoC-tegra210_ahub-Add-check-to-of_device_get.patch
+	patches.kernel.org/6.12.35-185-Make-cc-option-work-correctly-for-the-Wno-xyz.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
