--- a/series.conf
+++ b/series.conf
@@ -7983,6 +7983,7 @@
 	patches.kernel.org/6.12.35-359-hwmon-occ-Rework-attribute-registration-for-s.patch
 	patches.kernel.org/6.12.35-360-hwmon-occ-fix-unaligned-accesses.patch
 	patches.kernel.org/6.12.35-361-hwmon-ltc4282-avoid-repeated-register-write.patch
+	patches.kernel.org/6.12.35-362-pldmfw-Select-CRC32-when-PLDMFW-is-selected.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
