ipv6: remove leftover ip6 cookie initializer (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7969,6 +7969,7 @@
 	patches.kernel.org/6.12.35-345-drm-v3d-Avoid-NULL-pointer-dereference-in-v3d.patch
 	patches.kernel.org/6.12.35-346-Kunit-to-check-the-longest-symbol-length.patch
 	patches.kernel.org/6.12.35-347-x86-tools-Drop-duplicate-unlikely-definition-.patch
+	patches.kernel.org/6.12.35-348-ipv6-remove-leftover-ip6-cookie-initializer.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
