wifi: mt76: mt7925: introduce thermal protection (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7823,6 +7823,7 @@
 	patches.kernel.org/6.12.35-199-Bluetooth-btusb-Add-new-VID-PID-13d3-3630-for.patch
 	patches.kernel.org/6.12.35-200-wifi-mt76-mt76x2-Add-support-for-LiteOn-WN451.patch
 	patches.kernel.org/6.12.35-201-wifi-mt76-mt7921-add-160-MHz-AP-for-mt7922-de.patch
+	patches.kernel.org/6.12.35-202-wifi-mt76-mt7925-introduce-thermal-protection.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
