--- a/series.conf
+++ b/series.conf
@@ -7721,6 +7721,7 @@
 	patches.kernel.org/6.12.35-097-Input-ims-pcu-check-record-size-in-ims_pcu_fl.patch
 	patches.kernel.org/6.12.35-098-Input-gpio-keys-fix-possible-concurrent-acces.patch
 	patches.kernel.org/6.12.35-099-f2fs-fix-to-do-sanity-check-on-ino-and-xnid.patch
+	patches.kernel.org/6.12.35-100-f2fs-prevent-kernel-warning-due-to-negative-i.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
