--- a/series.conf
+++ b/series.conf
@@ -7982,6 +7982,7 @@
 	patches.kernel.org/6.12.35-358-drm-i915-pmu-Fix-build-error-with-GCOV-and-Au.patch
 	patches.kernel.org/6.12.35-359-hwmon-occ-Rework-attribute-registration-for-s.patch
 	patches.kernel.org/6.12.35-360-hwmon-occ-fix-unaligned-accesses.patch
+	patches.kernel.org/6.12.35-361-hwmon-ltc4282-avoid-repeated-register-write.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
