--- a/series.conf
+++ b/series.conf
@@ -7654,6 +7654,7 @@
 	patches.kernel.org/6.12.35-030-NFSD-Implement-FATTR4_CLONE_BLKSIZE-attribute.patch
 	patches.kernel.org/6.12.35-031-nfsd-nfsd4_spo_must_allow-must-check-this-is-.patch
 	patches.kernel.org/6.12.35-032-nfsd-Initialize-ssc-before-laundromat_work-to.patch
+	patches.kernel.org/6.12.35-033-SUNRPC-Prevent-hang-on-NFS-mount-with-xprtsec.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
