--- a/series.conf
+++ b/series.conf
@@ -7828,6 +7828,7 @@
 	patches.kernel.org/6.12.35-204-sctp-Do-not-wake-readers-in-__sctp_write_spac.patch
 	patches.kernel.org/6.12.35-205-libbpf-btf-Fix-string-handling-to-support-mul.patch
 	patches.kernel.org/6.12.35-206-cpufreq-scmi-Skip-SCMI-devices-that-aren-t-us.patch
+	patches.kernel.org/6.12.35-207-i2c-tegra-check-msg-length-in-SMBUS-block-rea.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
