ext4: factor out ext4_get_maxbytes() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7715,6 +7715,7 @@
 	patches.kernel.org/6.12.35-091-bus-fsl-mc-fix-GET-SET_TAILDROP-command-ids.patch
 	patches.kernel.org/6.12.35-092-ext4-inline-fix-len-overflow-in-ext4_prepare_.patch
 	patches.kernel.org/6.12.35-093-ext4-fix-calculation-of-credits-for-extent-tr.patch
+	patches.kernel.org/6.12.35-094-ext4-factor-out-ext4_get_maxbytes.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
