net: bridge: mcast: update multicast contex when vlan state is changed (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7875,6 +7875,7 @@
 	patches.kernel.org/6.12.35-251-wifi-mac80211-VLAN-traffic-in-multicast-path.patch
 	patches.kernel.org/6.12.35-252-Revert-mac80211-Dynamically-set-CoDel-paramet.patch
 	patches.kernel.org/6.12.35-253-wifi-iwlwifi-Add-missing-MODULE_FIRMWARE-for-.patch
+	patches.kernel.org/6.12.35-254-net-bridge-mcast-update-multicast-contex-when.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
