soc: qcom: pmic_glink_altmode: fix spurious DP hotplug events (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7739,6 +7739,7 @@
 	patches.kernel.org/6.12.35-115-watchdog-fix-watchdog-may-detect-false-positi.patch
 	patches.kernel.org/6.12.35-116-RDMA-iwcm-Fix-use-after-free-of-work-objects-.patch
 	patches.kernel.org/6.12.35-117-mm-fix-ratelimit_pages-update-error-in-dirty_.patch
+	patches.kernel.org/6.12.35-118-soc-qcom-pmic_glink_altmode-fix-spurious-DP-h.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
