--- a/series.conf
+++ b/series.conf
@@ -7622,6 +7622,7 @@
 	patches.kernel.org/6.12.34-504-drm-meson-Use-1000ULL-when-operating-with-mod.patch
 	patches.kernel.org/6.12.34-505-thermal-drivers-mediatek-lvts-Remove-unused-l.patch
 	patches.kernel.org/6.12.34-506-Linux-6.12.34.patch
+	patches.kernel.org/6.12.35-001-configfs-Do-not-override-creating-attribute-f.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
