scsi: smartpqi: Add new PCI IDs (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7864,6 +7864,7 @@
 	patches.kernel.org/6.12.35-240-netfilter-nft_set_pipapo-clamp-maximum-map-bu.patch
 	patches.kernel.org/6.12.35-241-libbpf-Add-identical-pointer-detection-to-btf.patch
 	patches.kernel.org/6.12.35-242-scsi-lpfc-Fix-lpfc_check_sli_ndlp-handling-fo.patch
+	patches.kernel.org/6.12.35-243-scsi-smartpqi-Add-new-PCI-IDs.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
