atm: Revert atm_account_tx() if copy_from_iter_full() fails (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7943,6 +7943,7 @@
 	patches.kernel.org/6.12.35-319-selinux-fix-selinux_xfrm_alloc_user-to-set-co.patch
 	patches.kernel.org/6.12.35-320-platform-x86-intel-uncore-freq-Fail-module-lo.patch
 	patches.kernel.org/6.12.35-321-sched_ext-sched-core-Don-t-call-scx_group_set.patch
+	patches.kernel.org/6.12.35-322-atm-Revert-atm_account_tx-if-copy_from_iter_f.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
