wifi: iwlwifi: Add missing MODULE_FIRMWARE for Qu-c0-jf-b0 (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7874,6 +7874,7 @@
 	patches.kernel.org/6.12.35-250-bpf-Use-proper-type-to-calculate-bpf_raw_tp_n.patch
 	patches.kernel.org/6.12.35-251-wifi-mac80211-VLAN-traffic-in-multicast-path.patch
 	patches.kernel.org/6.12.35-252-Revert-mac80211-Dynamically-set-CoDel-paramet.patch
+	patches.kernel.org/6.12.35-253-wifi-iwlwifi-Add-missing-MODULE_FIRMWARE-for-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
