wifi: ath11k: determine PM policy based on machine model (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7896,6 +7896,7 @@
 	patches.kernel.org/6.12.35-272-bpf-sockmap-Fix-data-lost-during-EAGAIN-retri.patch
 	patches.kernel.org/6.12.35-273-net-ethernet-cortina-Use-TOE-TSO-on-all-TCP.patch
 	patches.kernel.org/6.12.35-274-octeontx2-pf-Add-error-log-forcn10k_map_unmap.patch
+	patches.kernel.org/6.12.35-275-wifi-ath11k-determine-PM-policy-based-on-mach.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
