smb: fix secondary channel creation issue with kerberos by populating hostname when adding channels (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7971,6 +7971,7 @@
 	patches.kernel.org/6.12.35-347-x86-tools-Drop-duplicate-unlikely-definition-.patch
 	patches.kernel.org/6.12.35-348-ipv6-remove-leftover-ip6-cookie-initializer.patch
 	patches.kernel.org/6.12.35-349-ipv6-replace-ipcm6_init-calls-with-ipcm6_init.patch
+	patches.kernel.org/6.12.35-350-smb-fix-secondary-channel-creation-issue-with.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
