--- a/series.conf
+++ b/series.conf
@@ -7825,6 +7825,7 @@
 	patches.kernel.org/6.12.35-201-wifi-mt76-mt7921-add-160-MHz-AP-for-mt7922-de.patch
 	patches.kernel.org/6.12.35-202-wifi-mt76-mt7925-introduce-thermal-protection.patch
 	patches.kernel.org/6.12.35-203-wifi-mac80211-validate-SCAN_FLAG_AP-in-scan-r.patch
+	patches.kernel.org/6.12.35-204-sctp-Do-not-wake-readers-in-__sctp_write_spac.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
