net: atm: add lec_mutex (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8012,6 +8012,7 @@
 	patches.kernel.org/6.12.35-388-drm-xe-bmg-Update-Wa_16023588340.patch
 	patches.kernel.org/6.12.35-389-calipso-Fix-null-ptr-deref-in-calipso_req_-se.patch
 	patches.kernel.org/6.12.35-390-mlxbf_gige-return-EPROBE_DEFER-if-PHY-IRQ-is-.patch
+	patches.kernel.org/6.12.35-391-net-atm-add-lec_mutex.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
