wifi: ath12k: fix failed to set mhi state error during reboot with hardware grouping (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7884,6 +7884,7 @@
 	patches.kernel.org/6.12.35-260-software-node-Correct-a-OOB-check-in-software.patch
 	patches.kernel.org/6.12.35-261-isofs-fix-Y2038-and-Y2156-issues-in-Rock-Ridg.patch
 	patches.kernel.org/6.12.35-262-pinctrl-mcp23s08-Reset-all-pins-to-input-at-p.patch
+	patches.kernel.org/6.12.35-263-wifi-ath12k-fix-failed-to-set-mhi-state-error.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
