--- a/series.conf
+++ b/series.conf
@@ -7639,6 +7639,7 @@
 	patches.kernel.org/6.12.35-015-s390-pci-Remove-redundant-bus-removal-and-dis.patch
 	patches.kernel.org/6.12.35-016-s390-pci-Prevent-self-deletion-in-disable_slo.patch
 	patches.kernel.org/6.12.35-017-s390-pci-Allow-re-add-of-a-reserved-but-not-y.patch
+	patches.kernel.org/6.12.35-018-s390-pci-Serialize-device-addition-and-remova.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
