mtd: rawnand: qcom: Fix read len for onfi param page (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7748,6 +7748,7 @@
 	patches.kernel.org/6.12.35-124-KVM-VMX-Flush-shadow-VMCS-on-emergency-reboot.patch
 	patches.kernel.org/6.12.35-125-dm-mirror-fix-a-tiny-race-condition.patch
 	patches.kernel.org/6.12.35-126-dm-verity-fix-a-memory-leak-if-some-arguments.patch
+	patches.kernel.org/6.12.35-127-mtd-rawnand-qcom-Fix-read-len-for-onfi-param-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
