iio: adc: ad7944: mask high bits on direct read (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7785,6 +7785,7 @@
 	patches.kernel.org/6.12.35-161-dummycon-Trigger-redraw-when-switching-consol.patch
 	patches.kernel.org/6.12.35-162-mm-hugetlb-fix-huge_pmd_unshare-vs-GUP-fast-r.patch
 	patches.kernel.org/6.12.35-163-iio-imu-inv_icm42600-Fix-temperature-calculat.patch
+	patches.kernel.org/6.12.35-164-iio-adc-ad7944-mask-high-bits-on-direct-read.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
