mm: close theoretical race where stale TLB entries could linger (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7934,6 +7934,7 @@
 	patches.kernel.org/6.12.35-310-nvme-always-punt-polled-uring_cmd-end_io-work.patch
 	patches.kernel.org/6.12.35-311-net_sched-sch_sfq-reject-invalid-perturb-peri.patch
 	patches.kernel.org/6.12.35-312-net-clear-the-dst-when-changing-skb-protocol.patch
+	patches.kernel.org/6.12.35-313-mm-close-theoretical-race-where-stale-TLB-ent.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
