--- a/series.conf
+++ b/series.conf
@@ -7710,6 +7710,7 @@
 	patches.kernel.org/6.12.35-086-bus-firewall-Fix-missing-static-inline-annota.patch
 	patches.kernel.org/6.12.35-087-ata-pata_via-Force-PIO-for-ATAPI-devices-on-V.patch
 	patches.kernel.org/6.12.35-088-ata-ahci-Disallow-LPM-for-ASUSPRO-D840SA-moth.patch
+	patches.kernel.org/6.12.35-089-ata-ahci-Disallow-LPM-for-Asus-B550-F-motherb.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
