--- a/series.conf
+++ b/series.conf
@@ -7868,6 +7868,7 @@
 	patches.kernel.org/6.12.35-244-iommu-amd-Ensure-GA-log-notifier-callbacks-fi.patch
 	patches.kernel.org/6.12.35-245-wifi-iwlwifi-pcie-make-sure-to-lock-rxq-read.patch
 	patches.kernel.org/6.12.35-246-wifi-rtw89-8922a-fix-TX-fail-with-wrong-VCO-s.patch
+	patches.kernel.org/6.12.35-247-wifi-mac80211_hwsim-Prevent-tsf-from-setting-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
