s390/pci: Allow re-add of a reserved but not yet removed device (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7638,6 +7638,7 @@
 	patches.kernel.org/6.12.35-014-powerpc-pseries-msi-Avoid-reading-PCI-device-.patch
 	patches.kernel.org/6.12.35-015-s390-pci-Remove-redundant-bus-removal-and-dis.patch
 	patches.kernel.org/6.12.35-016-s390-pci-Prevent-self-deletion-in-disable_slo.patch
+	patches.kernel.org/6.12.35-017-s390-pci-Allow-re-add-of-a-reserved-but-not-y.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
