perf evsel: Missed close() when probing hybrid core PMUs (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8030,6 +8030,7 @@
 	patches.kernel.org/6.12.35-406-RISC-V-KVM-Fix-the-size-parameter-check-in-SB.patch
 	patches.kernel.org/6.12.35-407-RISC-V-KVM-Don-t-treat-SBI-HFENCE-calls-as-NO.patch
 	patches.kernel.org/6.12.35-408-gpio-pca953x-fix-wrong-error-probe-return-val.patch
+	patches.kernel.org/6.12.35-409-perf-evsel-Missed-close-when-probing-hybrid-c.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
