--- a/series.conf
+++ b/series.conf
@@ -7718,6 +7718,7 @@
 	patches.kernel.org/6.12.35-094-ext4-factor-out-ext4_get_maxbytes.patch
 	patches.kernel.org/6.12.35-095-ext4-ensure-i_size-is-smaller-than-maxbytes.patch
 	patches.kernel.org/6.12.35-096-ext4-only-dirty-folios-when-data-journaling-r.patch
+	patches.kernel.org/6.12.35-097-Input-ims-pcu-check-record-size-in-ims_pcu_fl.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
