clk: qcom: gcc-x1e80100: Set FORCE MEM CORE for UFS clocks (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7830,6 +7830,7 @@
 	patches.kernel.org/6.12.35-206-cpufreq-scmi-Skip-SCMI-devices-that-aren-t-us.patch
 	patches.kernel.org/6.12.35-207-i2c-tegra-check-msg-length-in-SMBUS-block-rea.patch
 	patches.kernel.org/6.12.35-208-i2c-npcm-Add-clock-toggle-recovery.patch
+	patches.kernel.org/6.12.35-209-clk-qcom-gcc-x1e80100-Set-FORCE-MEM-CORE-for-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
