--- a/series.conf
+++ b/series.conf
@@ -7698,6 +7698,7 @@
 	patches.kernel.org/6.12.35-074-ARM-omap-pmic-cpcap-do-not-mess-around-withou.patch
 	patches.kernel.org/6.12.35-075-ASoC-codecs-wcd9375-Fix-double-free-of-regula.patch
 	patches.kernel.org/6.12.35-076-ASoC-codecs-wcd937x-Drop-unused-buck_supply.patch
+	patches.kernel.org/6.12.35-077-block-use-plug-request-list-tail-for-one-shot.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
