nvme: always punt polled uring_cmd end_io work to task_work (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7931,6 +7931,7 @@
 	patches.kernel.org/6.12.35-307-smb-improve-directory-cache-reuse-for-readdir.patch
 	patches.kernel.org/6.12.35-308-scsi-storvsc-Increase-the-timeouts-to-storvsc.patch
 	patches.kernel.org/6.12.35-309-scsi-s390-zfcp-Ensure-synchronous-unit_add.patch
+	patches.kernel.org/6.12.35-310-nvme-always-punt-polled-uring_cmd-end_io-work.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
