workqueue: Initialize wq_isolated_cpumask in workqueue_init_early() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7989,6 +7989,7 @@
 	patches.kernel.org/6.12.35-365-net-ice-Perform-accurate-aRFS-flow-match.patch
 	patches.kernel.org/6.12.35-366-ice-fix-eswitch-code-memory-leak-in-reset-sce.patch
 	patches.kernel.org/6.12.35-367-e1000e-set-fixed-clock-frequency-indication-f.patch
+	patches.kernel.org/6.12.35-368-workqueue-Initialize-wq_isolated_cpumask-in-w.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
