--- a/series.conf
+++ b/series.conf
@@ -7676,6 +7676,7 @@
 	patches.kernel.org/6.12.35-052-media-davinci-vpif-Fix-memory-leak-in-probe-e.patch
 	patches.kernel.org/6.12.35-053-media-gspca-Add-error-handling-for-stv06xx_re.patch
 	patches.kernel.org/6.12.35-054-media-i2c-imx335-Fix-frame-size-enumeration.patch
+	patches.kernel.org/6.12.35-055-media-imagination-fix-a-potential-memory-leak.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
