--- a/series.conf
+++ b/series.conf
@@ -7889,6 +7889,7 @@
 	patches.kernel.org/6.12.35-265-sock-Correct-error-checking-condition-for-ass.patch
 	patches.kernel.org/6.12.35-266-i40e-fix-MMIO-write-access-to-an-invalid-page.patch
 	patches.kernel.org/6.12.35-267-ixgbe-Fix-unreachable-retry-logic-in-combined.patch
+	patches.kernel.org/6.12.35-268-RDMA-hns-initialize-db-in-update_srq_db.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
