--- a/series.conf
+++ b/series.conf
@@ -7732,6 +7732,7 @@
 	patches.kernel.org/6.12.35-108-EDAC-altera-Use-correct-write-width-with-the-.patch
 	patches.kernel.org/6.12.35-109-fbdev-Fix-fb_set_var-to-prevent-null-ptr-dere.patch
 	patches.kernel.org/6.12.35-110-parisc-unaligned-Fix-hex-output-to-show-8-hex.patch
+	patches.kernel.org/6.12.35-111-vgacon-Add-check-for-vc_origin-address-range-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
