media: imx-jpeg: Cleanup after an allocation error (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7689,6 +7689,7 @@
 	patches.kernel.org/6.12.35-065-media-imx-jpeg-Drop-the-first-error-frames.patch
 	patches.kernel.org/6.12.35-066-media-imx-jpeg-Move-mxc_jpeg_free_slot_data-a.patch
 	patches.kernel.org/6.12.35-067-media-imx-jpeg-Reset-slot-data-pointers-when-.patch
+	patches.kernel.org/6.12.35-068-media-imx-jpeg-Cleanup-after-an-allocation-er.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
