--- a/series.conf
+++ b/series.conf
@@ -7794,6 +7794,7 @@
 	patches.kernel.org/6.12.35-170-power-supply-collie-Fix-wakeup-source-leaks-o.patch
 	patches.kernel.org/6.12.35-171-mmc-Add-quirk-to-disable-DDR50-tuning.patch
 	patches.kernel.org/6.12.35-172-ACPICA-Avoid-sequence-overread-in-call-to-str.patch
+	patches.kernel.org/6.12.35-173-ASoC-tas2770-Power-cycle-amp-on-ISENSE-VSENSE.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
