ALSA: hda/realtek: Fix built-in mic on ASUS VivoBook X513EA (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7954,6 +7954,7 @@
 	patches.kernel.org/6.12.35-330-ALSA-hda-intel-Add-Thinkpad-E15-to-PM-deny-li.patch
 	patches.kernel.org/6.12.35-331-ALSA-hda-realtek-Add-mute-LED-support-for-HP-.patch
 	patches.kernel.org/6.12.35-332-ALSA-hda-realtek-enable-headset-mic-on-Latitu.patch
+	patches.kernel.org/6.12.35-333-ALSA-hda-realtek-Fix-built-in-mic-on-ASUS-Viv.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
