PCI: cadence-ep: Correct PBA offset in .set_msix() callback (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7771,6 +7771,7 @@
 	patches.kernel.org/6.12.35-147-Drivers-hv-Allocate-interrupt-and-monitor-pag.patch
 	patches.kernel.org/6.12.35-148-uio_hv_generic-Use-correct-size-for-interrupt.patch
 	patches.kernel.org/6.12.35-149-uio_hv_generic-Align-ring-size-to-system-page.patch
+	patches.kernel.org/6.12.35-150-PCI-cadence-ep-Correct-PBA-offset-in-.set_msi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
