--- a/series.conf
+++ b/series.conf
@@ -7949,6 +7949,7 @@
 	patches.kernel.org/6.12.35-325-Input-sparcspkr-avoid-unannotated-fall-throug.patch
 	patches.kernel.org/6.12.35-326-wifi-ath12k-Clear-affinity-hint-before-callin.patch
 	patches.kernel.org/6.12.35-327-wifi-cfg80211-init-wiphy_work-before-allocati.patch
+	patches.kernel.org/6.12.35-328-arm64-Restrict-pagetable-teardown-to-avoid-fa.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
