--- a/series.conf
+++ b/series.conf
@@ -7664,6 +7664,7 @@
 	patches.kernel.org/6.12.35-040-wifi-rtlwifi-disable-ASPM-for-RTL8723BE-with-.patch
 	patches.kernel.org/6.12.35-041-media-ov8856-suppress-probe-deferral-errors.patch
 	patches.kernel.org/6.12.35-042-media-ov5675-suppress-probe-deferral-errors.patch
+	patches.kernel.org/6.12.35-043-media-imx335-Use-correct-register-width-for-H.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
