--- a/series.conf
+++ b/series.conf
@@ -7925,6 +7925,7 @@
 	patches.kernel.org/6.12.35-301-LoongArch-Fix-panic-caused-by-NULL-PMD-in-hug.patch
 	patches.kernel.org/6.12.35-302-jffs2-check-that-raw-node-were-preallocated-b.patch
 	patches.kernel.org/6.12.35-303-jffs2-check-jffs2_prealloc_raw_node_refs-resu.patch
+	patches.kernel.org/6.12.35-304-cifs-deal-with-the-channel-loading-lag-while-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
