--- a/series.conf
+++ b/series.conf
@@ -7788,6 +7788,7 @@
 	patches.kernel.org/6.12.35-164-iio-adc-ad7944-mask-high-bits-on-direct-read.patch
 	patches.kernel.org/6.12.35-165-iio-adc-ti-ads1298-Kconfig-add-kfifo-dependen.patch
 	patches.kernel.org/6.12.35-166-iio-adc-ad7606_spi-fix-reg-write-value-mask.patch
+	patches.kernel.org/6.12.35-167-ACPICA-fix-acpi-operand-cache-leak-in-dswstat.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
