regulator: max20086: Fix MAX200086 chip id (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7640,6 +7640,7 @@
 	patches.kernel.org/6.12.35-016-s390-pci-Prevent-self-deletion-in-disable_slo.patch
 	patches.kernel.org/6.12.35-017-s390-pci-Allow-re-add-of-a-reserved-but-not-y.patch
 	patches.kernel.org/6.12.35-018-s390-pci-Serialize-device-addition-and-remova.patch
+	patches.kernel.org/6.12.35-019-regulator-max20086-Fix-MAX200086-chip-id.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
