wifi: iwlwifi: mvm: fix beacon CCK flag (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7859,6 +7859,7 @@
 	patches.kernel.org/6.12.35-235-wifi-mac80211-do-not-offer-a-mesh-path-if-for.patch
 	patches.kernel.org/6.12.35-236-clk-rockchip-rk3036-mark-ddrphy-as-critical.patch
 	patches.kernel.org/6.12.35-237-hid-asus-check-ROG-Ally-MCU-version-and-warn.patch
+	patches.kernel.org/6.12.35-238-wifi-iwlwifi-mvm-fix-beacon-CCK-flag.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
