wifi: ath12k: fix a possible dead lock caused by ab->base_lock (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7833,6 +7833,7 @@
 	patches.kernel.org/6.12.35-209-clk-qcom-gcc-x1e80100-Set-FORCE-MEM-CORE-for-.patch
 	patches.kernel.org/6.12.35-210-net-dlink-add-synchronization-for-stats-updat.patch
 	patches.kernel.org/6.12.35-211-wifi-ath12k-fix-macro-definition-HAL_RX_MSDU_.patch
+	patches.kernel.org/6.12.35-212-wifi-ath12k-fix-a-possible-dead-lock-caused-b.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
