Drivers: hv: Allocate interrupt and monitor pages aligned to system page boundary (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7768,6 +7768,7 @@
 	patches.kernel.org/6.12.35-144-cifs-update-dstaddr-whenever-channel-iface-is.patch
 	patches.kernel.org/6.12.35-145-cifs-dns-resolution-is-needed-only-for-primar.patch
 	patches.kernel.org/6.12.35-146-smb-client-add-NULL-check-in-automount_fullpa.patch
+	patches.kernel.org/6.12.35-147-Drivers-hv-Allocate-interrupt-and-monitor-pag.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
