--- a/series.conf
+++ b/series.conf
@@ -7908,6 +7908,7 @@
 	patches.kernel.org/6.12.35-284-tee-Prevent-size-calculation-wraparound-on-32.patch
 	patches.kernel.org/6.12.35-285-Revert-bus-ti-sysc-Probe-for-l4_wkup-and-l4_c.patch
 	patches.kernel.org/6.12.35-286-fs-xattr.c-fix-simple_xattr_list.patch
+	patches.kernel.org/6.12.35-287-platform-x86-amd-pmc-Clear-metrics-table-at-s.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
