--- a/series.conf
+++ b/series.conf
@@ -7797,6 +7797,7 @@
 	patches.kernel.org/6.12.35-173-ASoC-tas2770-Power-cycle-amp-on-ISENSE-VSENSE.patch
 	patches.kernel.org/6.12.35-174-ASoC-intel-sdw_utils-Assign-initial-value-in-.patch
 	patches.kernel.org/6.12.35-175-ACPI-bus-Bail-out-if-acpi_kobj-registration-f.patch
+	patches.kernel.org/6.12.35-176-ACPI-Add-missing-prototype-for-non-CONFIG_SUS.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
