dummycon: Trigger redraw when switching consoles with deferred takeover (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7782,6 +7782,7 @@
 	patches.kernel.org/6.12.35-158-accel-ivpu-Use-firmware-names-from-upstream-r.patch
 	patches.kernel.org/6.12.35-159-accel-ivpu-Use-dma_resv_lock-instead-of-a-cus.patch
 	patches.kernel.org/6.12.35-160-accel-ivpu-Fix-warning-in-ivpu_gem_bo_free.patch
+	patches.kernel.org/6.12.35-161-dummycon-Trigger-redraw-when-switching-consol.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
