platform/x86/amd: pmf: Prevent amd_pmf_tee_deinit() from running twice (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7909,6 +7909,7 @@
 	patches.kernel.org/6.12.35-285-Revert-bus-ti-sysc-Probe-for-l4_wkup-and-l4_c.patch
 	patches.kernel.org/6.12.35-286-fs-xattr.c-fix-simple_xattr_list.patch
 	patches.kernel.org/6.12.35-287-platform-x86-amd-pmc-Clear-metrics-table-at-s.patch
+	patches.kernel.org/6.12.35-288-platform-x86-amd-pmf-Prevent-amd_pmf_tee_dein.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
