--- a/series.conf
+++ b/series.conf
@@ -7939,6 +7939,7 @@
 	patches.kernel.org/6.12.35-315-x86-virt-tdx-Avoid-indirect-calls-to-TDX-asse.patch
 	patches.kernel.org/6.12.35-316-selftests-x86-Add-a-test-to-detect-infinite-S.patch
 	patches.kernel.org/6.12.35-317-ksmbd-fix-null-pointer-dereference-in-destroy.patch
+	patches.kernel.org/6.12.35-318-platform-x86-ideapad-laptop-use-usleep_range-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
