--- a/series.conf
+++ b/series.conf
@@ -7942,6 +7942,7 @@
 	patches.kernel.org/6.12.35-318-platform-x86-ideapad-laptop-use-usleep_range-.patch
 	patches.kernel.org/6.12.35-319-selinux-fix-selinux_xfrm_alloc_user-to-set-co.patch
 	patches.kernel.org/6.12.35-320-platform-x86-intel-uncore-freq-Fail-module-lo.patch
+	patches.kernel.org/6.12.35-321-sched_ext-sched-core-Don-t-call-scx_group_set.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
