--- a/series.conf
+++ b/series.conf
@@ -7705,6 +7705,7 @@
 	patches.kernel.org/6.12.35-081-can-kvaser_pciefd-refine-error-prone-echo_skb.patch
 	patches.kernel.org/6.12.35-082-can-tcan4x5x-fix-power-regulator-retrieval-du.patch
 	patches.kernel.org/6.12.35-083-ceph-avoid-kernel-BUG-for-encrypted-inode-wit.patch
+	patches.kernel.org/6.12.35-084-ceph-set-superblock-s_magic-for-IMA-fsmagic-m.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
