calipso: Fix null-ptr-deref in calipso_req_{set,del}attr() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8010,6 +8010,7 @@
 	patches.kernel.org/6.12.35-386-drm-xe-Wire-up-device-shutdown-handler.patch
 	patches.kernel.org/6.12.35-387-drm-xe-gt-Update-handling-of-xe_force_wake_ge.patch
 	patches.kernel.org/6.12.35-388-drm-xe-bmg-Update-Wa_16023588340.patch
+	patches.kernel.org/6.12.35-389-calipso-Fix-null-ptr-deref-in-calipso_req_-se.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
