i2c: npcm: Add clock toggle recovery (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7829,6 +7829,7 @@
 	patches.kernel.org/6.12.35-205-libbpf-btf-Fix-string-handling-to-support-mul.patch
 	patches.kernel.org/6.12.35-206-cpufreq-scmi-Skip-SCMI-devices-that-aren-t-us.patch
 	patches.kernel.org/6.12.35-207-i2c-tegra-check-msg-length-in-SMBUS-block-rea.patch
+	patches.kernel.org/6.12.35-208-i2c-npcm-Add-clock-toggle-recovery.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
