--- a/series.conf
+++ b/series.conf
@@ -7644,6 +7644,7 @@
 	patches.kernel.org/6.12.35-020-regulator-max20086-Change-enable-gpio-to-opti.patch
 	patches.kernel.org/6.12.35-021-net-mlx5_core-Add-error-handling-inmlx5_query.patch
 	patches.kernel.org/6.12.35-022-net-mlx5-Add-error-handling-in-mlx5_query_nic.patch
+	patches.kernel.org/6.12.35-023-wifi-p54-prevent-buffer-overflow-in-p54_rx_ee.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
