tcp: always seek for minimal rtt in tcp_rcv_rtt_update() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7837,6 +7837,7 @@
 	patches.kernel.org/6.12.35-213-wifi-ath11k-Fix-QMI-memory-reuse-logic.patch
 	patches.kernel.org/6.12.35-214-iommu-amd-Allow-matching-ACPI-HID-devices-wit.patch
 	patches.kernel.org/6.12.35-215-wifi-rtw89-leave-idle-mode-when-setting-WEP-e.patch
+	patches.kernel.org/6.12.35-216-tcp-always-seek-for-minimal-rtt-in-tcp_rcv_rt.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
