--- a/series.conf
+++ b/series.conf
@@ -7945,6 +7945,7 @@
 	patches.kernel.org/6.12.35-321-sched_ext-sched-core-Don-t-call-scx_group_set.patch
 	patches.kernel.org/6.12.35-322-atm-Revert-atm_account_tx-if-copy_from_iter_f.patch
 	patches.kernel.org/6.12.35-323-wifi-rtw89-phy-add-dummy-C2H-event-handler-fo.patch
+	patches.kernel.org/6.12.35-324-cpufreq-amd-pstate-Add-missing-NULL-ptr-check.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
