io_uring: fix task leak issue in io_wq_create() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7915,6 +7915,7 @@
 	patches.kernel.org/6.12.35-291-powerpc-vdso-Fix-build-of-VDSO32-with-pcrel.patch
 	patches.kernel.org/6.12.35-292-powerpc-eeh-Fix-missing-PE-bridge-reconfigura.patch
 	patches.kernel.org/6.12.35-293-io_uring-kbuf-don-t-truncate-end-buffer-for-m.patch
+	patches.kernel.org/6.12.35-294-io_uring-fix-task-leak-issue-in-io_wq_create.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
