wifi: rtlwifi: disable ASPM for RTL8723BE with subsystem ID 11ad:1723 (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7661,6 +7661,7 @@
 	patches.kernel.org/6.12.35-037-jbd2-fix-data-race-and-null-ptr-deref-in-jbd2.patch
 	patches.kernel.org/6.12.35-038-svcrdma-Unregister-the-device-if-svc_rdma_acc.patch
 	patches.kernel.org/6.12.35-039-wifi-rtw88-usb-Reduce-control-message-timeout.patch
+	patches.kernel.org/6.12.35-040-wifi-rtlwifi-disable-ASPM-for-RTL8723BE-with-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
