media: nxp: imx8-isi: better handle the m2m usage_count (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7665,6 +7665,7 @@
 	patches.kernel.org/6.12.35-041-media-ov8856-suppress-probe-deferral-errors.patch
 	patches.kernel.org/6.12.35-042-media-ov5675-suppress-probe-deferral-errors.patch
 	patches.kernel.org/6.12.35-043-media-imx335-Use-correct-register-width-for-H.patch
+	patches.kernel.org/6.12.35-044-media-nxp-imx8-isi-better-handle-the-m2m-usag.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
