io_uring/kbuf: don't truncate end buffer for multiple buffer peeks (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7914,6 +7914,7 @@
 	patches.kernel.org/6.12.35-290-platform-x86-dell_rbu-Stop-overwriting-data-b.patch
 	patches.kernel.org/6.12.35-291-powerpc-vdso-Fix-build-of-VDSO32-with-pcrel.patch
 	patches.kernel.org/6.12.35-292-powerpc-eeh-Fix-missing-PE-bridge-reconfigura.patch
+	patches.kernel.org/6.12.35-293-io_uring-kbuf-don-t-truncate-end-buffer-for-m.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
