--- a/series.conf
+++ b/series.conf
@@ -7804,6 +7804,7 @@
 	patches.kernel.org/6.12.35-180-power-supply-bq27xxx-Retrieve-again-when-busy.patch
 	patches.kernel.org/6.12.35-181-pmdomain-core-Reset-genpd-states-to-avoid-fre.patch
 	patches.kernel.org/6.12.35-182-ACPICA-utilities-Fix-overflow-check-in-vsnpri.patch
+	patches.kernel.org/6.12.35-183-platform-msi-Add-msi_remove_device_irq_domain.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
