ARM: 9447/1: arm/memremap: fix arch_memremap_can_ram_remap() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7694,6 +7694,7 @@
 	patches.kernel.org/6.12.35-070-media-uvcvideo-Send-control-events-for-partia.patch
 	patches.kernel.org/6.12.35-071-media-uvcvideo-Fix-deferred-probing-error.patch
 	patches.kernel.org/6.12.35-072-arm64-mm-Close-theoretical-race-where-stale-T.patch
+	patches.kernel.org/6.12.35-073-ARM-9447-1-arm-memremap-fix-arch_memremap_can.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
