--- a/series.conf
+++ b/series.conf
@@ -7872,6 +7872,7 @@
 	patches.kernel.org/6.12.35-248-netdevsim-Mark-NAPI-ID-on-skb-in-nsim_rcv.patch
 	patches.kernel.org/6.12.35-249-net-mlx5-HWS-Fix-IP-version-decision.patch
 	patches.kernel.org/6.12.35-250-bpf-Use-proper-type-to-calculate-bpf_raw_tp_n.patch
+	patches.kernel.org/6.12.35-251-wifi-mac80211-VLAN-traffic-in-multicast-path.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
