atm: atmtcp: Free invalid length skb in atmtcp_c_send() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8000,6 +8000,7 @@
 	patches.kernel.org/6.12.35-376-ptp-allow-reading-of-currently-dialed-frequen.patch
 	patches.kernel.org/6.12.35-377-wifi-carl9170-do-not-ping-device-which-has-fa.patch
 	patches.kernel.org/6.12.35-378-mpls-Use-rcu_dereference_rtnl-in-mpls_route_i.patch
+	patches.kernel.org/6.12.35-379-atm-atmtcp-Free-invalid-length-skb-in-atmtcp_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
