--- a/series.conf
+++ b/series.conf
@@ -7955,6 +7955,7 @@
 	patches.kernel.org/6.12.35-331-ALSA-hda-realtek-Add-mute-LED-support-for-HP-.patch
 	patches.kernel.org/6.12.35-332-ALSA-hda-realtek-enable-headset-mic-on-Latitu.patch
 	patches.kernel.org/6.12.35-333-ALSA-hda-realtek-Fix-built-in-mic-on-ASUS-Viv.patch
+	patches.kernel.org/6.12.35-334-ALSA-hda-realtek-Add-quirk-for-Asus-GU605C.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
