--- a/series.conf
+++ b/series.conf
@@ -7920,6 +7920,7 @@
 	patches.kernel.org/6.12.35-296-platform-loongarch-laptop-Get-brightness-sett.patch
 	patches.kernel.org/6.12.35-297-platform-loongarch-laptop-Unregister-generic_.patch
 	patches.kernel.org/6.12.35-298-platform-loongarch-laptop-Add-backlight-power.patch
+	patches.kernel.org/6.12.35-299-LoongArch-vDSO-Correctly-use-asm-parameters-i.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
