pinctrl: armada-37xx: propagate error from armada_37xx_gpio_get_direction() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7847,6 +7847,7 @@
 	patches.kernel.org/6.12.35-223-xfrm-validate-assignment-of-maximal-possible-.patch
 	patches.kernel.org/6.12.35-224-net-atlantic-generate-software-timestamp-just.patch
 	patches.kernel.org/6.12.35-225-pinctrl-armada-37xx-propagate-error-from-arma.patch
+	patches.kernel.org/6.12.35-226-pinctrl-armada-37xx-propagate-error-from-arma.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
