hwmon: (occ) Rework attribute registration for stack usage (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7980,6 +7980,7 @@
 	patches.kernel.org/6.12.35-356-ionic-Prevent-driver-fw-getting-out-of-sync-o.patch
 	patches.kernel.org/6.12.35-357-drm-nouveau-bl-increase-buffer-size-to-avoid-.patch
 	patches.kernel.org/6.12.35-358-drm-i915-pmu-Fix-build-error-with-GCOV-and-Au.patch
+	patches.kernel.org/6.12.35-359-hwmon-occ-Rework-attribute-registration-for-s.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
