--- a/series.conf
+++ b/series.conf
@@ -7652,6 +7652,7 @@
 	patches.kernel.org/6.12.35-028-NFSD-unregister-filesystem-in-case-genl_regis.patch
 	patches.kernel.org/6.12.35-029-NFSD-fix-race-between-nfsd-registration-and-e.patch
 	patches.kernel.org/6.12.35-030-NFSD-Implement-FATTR4_CLONE_BLKSIZE-attribute.patch
+	patches.kernel.org/6.12.35-031-nfsd-nfsd4_spo_must_allow-must-check-this-is-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
