--- a/series.conf
+++ b/series.conf
@@ -7660,6 +7660,7 @@
 	patches.kernel.org/6.12.35-036-wifi-ath12k-fix-ring-buffer-corruption.patch
 	patches.kernel.org/6.12.35-037-jbd2-fix-data-race-and-null-ptr-deref-in-jbd2.patch
 	patches.kernel.org/6.12.35-038-svcrdma-Unregister-the-device-if-svc_rdma_acc.patch
+	patches.kernel.org/6.12.35-039-wifi-rtw88-usb-Reduce-control-message-timeout.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
