--- a/series.conf
+++ b/series.conf
@@ -7903,6 +7903,7 @@
 	patches.kernel.org/6.12.35-279-net-mlx5-HWS-Harden-IP-version-definer-checks.patch
 	patches.kernel.org/6.12.35-280-fbcon-Make-sure-modelist-not-set-on-unregiste.patch
 	patches.kernel.org/6.12.35-281-watchdog-da9052_wdt-respect-TWDMIN.patch
+	patches.kernel.org/6.12.35-282-bus-fsl-mc-increase-MC_CMD_COMPLETION_TIMEOUT.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
