--- a/series.conf
+++ b/series.conf
@@ -7897,6 +7897,7 @@
 	patches.kernel.org/6.12.35-273-net-ethernet-cortina-Use-TOE-TSO-on-all-TCP.patch
 	patches.kernel.org/6.12.35-274-octeontx2-pf-Add-error-log-forcn10k_map_unmap.patch
 	patches.kernel.org/6.12.35-275-wifi-ath11k-determine-PM-policy-based-on-mach.patch
+	patches.kernel.org/6.12.35-276-wifi-ath12k-fix-link-valid-field-initializati.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
