--- a/series.conf
+++ b/series.conf
@@ -7839,6 +7839,7 @@
 	patches.kernel.org/6.12.35-215-wifi-rtw89-leave-idle-mode-when-setting-WEP-e.patch
 	patches.kernel.org/6.12.35-216-tcp-always-seek-for-minimal-rtt-in-tcp_rcv_rt.patch
 	patches.kernel.org/6.12.35-217-tcp-remove-zero-TCP-TS-samples-for-autotuning.patch
+	patches.kernel.org/6.12.35-218-tcp-fix-initial-tp-rcvq_space.space-value-for.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
