bus: fsl-mc: do not add a device-link for the UAPI used DPMCP device (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7711,6 +7711,7 @@
 	patches.kernel.org/6.12.35-087-ata-pata_via-Force-PIO-for-ATAPI-devices-on-V.patch
 	patches.kernel.org/6.12.35-088-ata-ahci-Disallow-LPM-for-ASUSPRO-D840SA-moth.patch
 	patches.kernel.org/6.12.35-089-ata-ahci-Disallow-LPM-for-Asus-B550-F-motherb.patch
+	patches.kernel.org/6.12.35-090-bus-fsl-mc-do-not-add-a-device-link-for-the-U.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
