PCI: dwc: ep: Correct PBA offset in .set_msix() callback (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7772,6 +7772,7 @@
 	patches.kernel.org/6.12.35-148-uio_hv_generic-Use-correct-size-for-interrupt.patch
 	patches.kernel.org/6.12.35-149-uio_hv_generic-Align-ring-size-to-system-page.patch
 	patches.kernel.org/6.12.35-150-PCI-cadence-ep-Correct-PBA-offset-in-.set_msi.patch
+	patches.kernel.org/6.12.35-151-PCI-dwc-ep-Correct-PBA-offset-in-.set_msix-ca.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
