EDAC/altera: Use correct write width with the INTTEST register (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7729,6 +7729,7 @@
 	patches.kernel.org/6.12.35-105-net-ftgmac100-select-FIXED_PHY.patch
 	patches.kernel.org/6.12.35-106-iommu-vt-d-Restore-context-entry-setup-order-.patch
 	patches.kernel.org/6.12.35-107-fbdev-Fix-do_register_framebuffer-to-prevent-.patch
+	patches.kernel.org/6.12.35-108-EDAC-altera-Use-correct-write-width-with-the-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
