NFSD: Implement FATTR4_CLONE_BLKSIZE attribute (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7651,6 +7651,7 @@
 	patches.kernel.org/6.12.35-027-wifi-ath11k-fix-ring-buffer-corruption.patch
 	patches.kernel.org/6.12.35-028-NFSD-unregister-filesystem-in-case-genl_regis.patch
 	patches.kernel.org/6.12.35-029-NFSD-fix-race-between-nfsd-registration-and-e.patch
+	patches.kernel.org/6.12.35-030-NFSD-Implement-FATTR4_CLONE_BLKSIZE-attribute.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
