smb: Log an error when close_all_cached_dirs fails (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8016,6 +8016,7 @@
 	patches.kernel.org/6.12.35-392-net-atm-fix-proc-net-atm-lec-handling.patch
 	patches.kernel.org/6.12.35-393-EDAC-amd64-Correct-number-of-UMCs-for-family-.patch
 	patches.kernel.org/6.12.35-394-dt-bindings-i2c-nvidia-tegra20-i2c-Specify-th.patch
+	patches.kernel.org/6.12.35-395-smb-Log-an-error-when-close_all_cached_dirs-f.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
