--- a/series.conf
+++ b/series.conf
@@ -7645,6 +7645,7 @@
 	patches.kernel.org/6.12.35-021-net-mlx5_core-Add-error-handling-inmlx5_query.patch
 	patches.kernel.org/6.12.35-022-net-mlx5-Add-error-handling-in-mlx5_query_nic.patch
 	patches.kernel.org/6.12.35-023-wifi-p54-prevent-buffer-overflow-in-p54_rx_ee.patch
+	patches.kernel.org/6.12.35-024-wifi-mt76-mt7925-fix-host-interrupt-register-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
