--- a/series.conf
+++ b/series.conf
@@ -7950,6 +7950,7 @@
 	patches.kernel.org/6.12.35-326-wifi-ath12k-Clear-affinity-hint-before-callin.patch
 	patches.kernel.org/6.12.35-327-wifi-cfg80211-init-wiphy_work-before-allocati.patch
 	patches.kernel.org/6.12.35-328-arm64-Restrict-pagetable-teardown-to-avoid-fa.patch
+	patches.kernel.org/6.12.35-329-ALSA-usb-audio-Rename-ALSA-kcontrol-PCM-and-P.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
