net: atm: fix /proc/net/atm/lec handling (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8013,6 +8013,7 @@
 	patches.kernel.org/6.12.35-389-calipso-Fix-null-ptr-deref-in-calipso_req_-se.patch
 	patches.kernel.org/6.12.35-390-mlxbf_gige-return-EPROBE_DEFER-if-PHY-IRQ-is-.patch
 	patches.kernel.org/6.12.35-391-net-atm-add-lec_mutex.patch
+	patches.kernel.org/6.12.35-392-net-atm-fix-proc-net-atm-lec-handling.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
