--- a/series.conf
+++ b/series.conf
@@ -7968,6 +7968,7 @@
 	patches.kernel.org/6.12.35-344-sunrpc-handle-SVC_GARBAGE-during-svc-auth-pro.patch
 	patches.kernel.org/6.12.35-345-drm-v3d-Avoid-NULL-pointer-dereference-in-v3d.patch
 	patches.kernel.org/6.12.35-346-Kunit-to-check-the-longest-symbol-length.patch
+	patches.kernel.org/6.12.35-347-x86-tools-Drop-duplicate-unlikely-definition-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
