media: vivid: Change the siize of the composing (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -7685,6 +7685,7 @@
 	patches.kernel.org/6.12.35-061-media-venus-Fix-probe-error-handling.patch
 	patches.kernel.org/6.12.35-062-media-videobuf2-use-sgtable-based-scatterlist.patch
 	patches.kernel.org/6.12.35-063-media-vidtv-Terminating-the-subsequent-proces.patch
+	patches.kernel.org/6.12.35-064-media-vivid-Change-the-siize-of-the-composing.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
